EVA-229 feat: Se implementa la finalización de una actividad cargando soportes haciendo uso de plugin DropZoneJS.
Faltan realizar algunas mejoras en el fomulario  en cuanto  visualización  por ejemplo cuando la tarea ya esta finalizada.

--- a/GestionActividades/templates/GestionActividades/Actividades/modal_cargar_editar_soportes.html
+++ b/GestionActividades/templates/GestionActividades/Actividades/modal_cargar_editar_soportes.html
@@ -19,6 +19,7 @@
                 </button>
             </div>
             <div class="modal-body">
+                <input hidden id="id_actividad" value="{{ actividad.id }}">
                 <div class="form-group">
                     <div class="form-group">
                         <p class="col-md-12">Estado:</p>
