--- a/GestionDocumental/templates/GestionDocumental/ConsecutivoActasContratos/_modal_crear_editar_consecutivo.html
+++ b/GestionDocumental/templates/GestionDocumental/ConsecutivoActasContratos/_modal_crear_editar_consecutivo.html
@@ -1,11 +1,11 @@
 {% load eva_tags %}
 {% load static %}
-<form id="viaticoscomisiones_form" method="post" class="needs-validation" novalidate>
+<form id="actascontratos_form" method="post" class="needs-validation" novalidate>
     <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
             <div class="modal-header p-b-0">
                 <h4 class="modal-title">
-                    {% if editar %}Editar consecutivo de actas de contratos: {{ consecutivo.codigo }}{% else %}Editar consecutivo de actas de contratos {% endif %}
+                    {% if editar %}Editar consecutivo de actas de contratos: {{ consecutivo.codigo }}{% else %}Crear consecutivo de actas de contratos {% endif %}
                 </h4>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true"><i class="fal fa-times"></i></span>
@@ -15,29 +15,38 @@
             <div class="modal-body">
                 <div class="form-group">
                     <div class="form-group">
-                        <input id="contrato_select_id" style="display: none">
                         <div class="col-md-12">
-                            {% select_tag contratos 'contrato_id' 'Seleccione un contrato' texto_label="Contrato (Opcional)" value=consecutivo.contrato_id invalido=errores.contrato %}
+                            {% select_tag tipo_acta 'tipo_acta_id' 'Seleccione tipo de acta' value=consecutivo.tipo_acta texto_label="Tipo de acta" required="" mensaje_validacion='Por favor seleccione un tipo de acta' %}
                         </div>
                     </div>
-                    {% if procesos %}
+                    <div class="form-group">
                         <div class="col-md-12">
-                            {% select_tag procesos 'proceso_id' 'Seleccione un proceso' texto_label="Proceso"  required="" value=consecutivo.proceso invalido=errores.proceso mensaje_validacion='Por favor seleccione un proceso' %}
+                            {% select_tag lista_consecutivos 'consecutivo_contrato_id' 'Seleccione un consecutivo' value=consecutivo.consecutivo_contrato_id texto_label="Consecutivo de contrato" required="" mensaje_validacion='Por favor seleccione un consecutivo' %}
                         </div>
-                    {% endif %}
-                </div>
-                <div class="form-group">
+                    </div>
+                    <div class="form-group">
+                        <div class="col-md-12">
+                            {% input_date_tag 'fecha_suspension' 'Fecha de suspensión' placeholder="Seleccione una fecha de suspensión" value=consecutivo.fecha_suspension required="" autocomplete="off" mensaje_validacion='Por favor seleccione una fecha de suspensión.' %}
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div id="fecha_reinicio_mostrar" class="col-md-12">
+                            {% input_date_tag 'fecha_reinicio' 'Fecha de reinicio' placeholder="Seleccione una fecha de reinicio" value=consecutivo.fecha_reinicio required="" autocomplete="off" mensaje_validacion='Por favor seleccione una fecha de reinicio.' %}
+                        </div>
+                    </div>
+                    <div class="form-group">
                         <div class="col-md-12">
                             {% input_textarea_tag 'descripcion' 'Descripción del Documento' placeholder="Ingrese una descripción" required="" maxlength="300" value=consecutivo.descripcion mensaje_validacion='Por favor digite una descripción.' invalido=errores.descripcion %}
                         </div>
-                </div>
-                {% if editar %}
+                    </div>
+                    {% if editar %}
                         <div class="form-group">
                             <div id="motivo" class="col-md-12">
                                 {% input_textarea_tag 'motivo' 'Motivo' placeholder="Digite Motivo" value=consecutivo.justificacion|default_if_none:"" required="" mensaje_validacion='Por favor digite el motivo.' %}
                             </div>
                         </div>
-                {% endif %}
+                    {% endif %}
+                </div>
             </div>
             <div class="modal-footer">
                 <button data-dismiss="modal" class="btn btn-danger btn-pills">Cancelar</button>
